<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.justyna.tictactoe.MainActivity"
    android:id="@+id/relativeMain_layout">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:id="@+id/start_button"

        android:minWidth="130dp"
        android:background="@drawable/button_selector"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="652dp"
        android:layout_height="220dp"
        android:id="@+id/start_imageView"
        android:background="@drawable/startview_icon"
        android:layout_above="@+id/firstUsername_editText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstUsername_editText"
        android:hint="@string/first_username"
        android:layout_alignTop="@+id/firstUser_imageView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/secondUsername_editText"
        android:layout_marginTop="33dp"
        android:hint="@string/second_username"
        android:layout_below="@+id/firstUser_imageView"
        android:layout_alignStart="@+id/firstUsername_editText" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/tic1"
        android:id="@+id/firstUser_imageView"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/tic2"
        android:id="@+id/secondUser_imageView"
        android:layout_alignTop="@+id/secondUsername_editText"
        android:layout_toStartOf="@+id/firstUser_imageView"
        android:layout_alignEnd="@+id/firstUser_imageView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_names"
        android:id="@+id/resetNames_button"
        android:background="@drawable/button_selector"
        android:visibility="invisible"
        android:layout_alignBaseline="@+id/start_button"
        android:layout_alignBottom="@+id/start_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
