<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.justyna.tictactoe.GameActivity"
    android:id="@+id/relativeGame_layout">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/gameboard_gridLayout">


        <ImageButton
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:id="@+id/imageButton1"
            android:layout_marginLeft="20dp"
            android:layout_margin="@dimen/image_view_margin"
            android:src="@drawable/tic0"
            android:background="@color/colorPrimary"
            android:scaleType="fitXY"
            android:layout_row="0"
            android:layout_column="0"
            />

        <ImageButton
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:id="@+id/imageButton2"
            android:layout_margin="@dimen/image_view_margin"
            android:layout_row="0"
            android:layout_column="1"
            android:src="@drawable/tic0"
            android:background="@color/colorPrimary"
            android:scaleType="fitXY"
            />

        <ImageButton
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:id="@+id/imageButton3"
            android:layout_margin="@dimen/image_view_margin"
            android:layout_row="0"
            android:layout_column="2"
            android:src="@drawable/tic0"
            android:background="@color/colorPrimary"
            android:scaleType="fitXY"/>

        <ImageButton
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/imageButton4"
            android:layout_margin="@dimen/image_view_margin"
            android:layout_row="1"
            android:layout_column="0"
            android:src="@drawable/tic0"
            android:background="@color/colorPrimary"
            android:scaleType="fitXY"/>

        <ImageButton
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:id="@+id/imageButton5"
            android:layout_margin="@dimen/image_view_margin"
            android:layout_row="1"
            android:layout_column="1"
            android:src="@drawable/tic0"
            android:background="@color/colorPrimary"
            android:scaleType="fitXY"/>

        <ImageButton
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:id="@+id/imageButton6"
            android:layout_margin="@dimen/image_view_margin"
            android:layout_row="1"
            android:layout_column="2"
            android:src="@drawable/tic0"
            android:background="@color/colorPrimary"
            android:scaleType="fitXY"/>

        <ImageButton
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/imageButton7"
            android:layout_margin="@dimen/image_view_margin"
            android:layout_row="2"
            android:layout_column="0"
            android:src="@drawable/tic0"
            android:background="@color/colorPrimary"
            android:scaleType="fitXY"/>

        <ImageButton
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:id="@+id/imageButton8"
            android:layout_margin="@dimen/image_view_margin"
            android:layout_row="2"
            android:layout_column="1"
            android:src="@drawable/tic0"
            android:background="@color/colorPrimary"
            android:scaleType="fitXY"/>

        <ImageButton
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:id="@+id/imageButton9"
            android:layout_margin="@dimen/image_view_margin"
            android:layout_row="2"
            android:layout_column="2"
            android:src="@drawable/tic0"
            android:background="@color/colorPrimary"
            android:scaleType="fitXY"/>
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:minWidth="130dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/whoseTurn_textView"
        android:text="@string/whose_turn"
        android:layout_alignBottom="@+id/whoseTurn_imageView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/whoseTurn_imageView"
        android:layout_below="@+id/gameboard_gridLayout"
        android:layout_toEndOf="@+id/whoseTurn_textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/new_round"
        android:visibility="invisible"
        android:id="@+id/restart_button"

        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/whoseTurn_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="User1 will "
        android:id="@+id/resultCross_textView"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/whoseTurn_imageView"
        android:layout_toEndOf="@+id/resultCross_imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="User2 will be"
        android:id="@+id/resultNought_textView"
        android:layout_alignTop="@+id/pointsCross_textView"
        android:layout_alignEnd="@+id/whoseTurn_imageView" />

    <ImageView
        android:minWidth="21dp"
        android:minHeight="21dp"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:id="@+id/resultCross_imageView"
        android:layout_marginRight="2dp"
        android:src="@drawable/tic1"
        android:layout_alignTop="@+id/resultCross_textView"
        android:layout_alignStart="@+id/restart_button" />

    <ImageView
    android:layout_width="21dp"
    android:layout_height="21dp"
    android:id="@+id/resultNought_imageView"
    android:layout_marginRight="2dp"
    android:src="@drawable/tic2"
        android:layout_alignTop="@+id/resultNought_textView"
        android:layout_toStartOf="@+id/resultNought_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/pointsCross_textView"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/resultCross_textView"
        android:layout_toEndOf="@+id/resultCross_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/pointsNought_textView"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/resultNought_textView"
        android:layout_toEndOf="@+id/resultNought_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/round_textView"
        android:text="@string/round"
        android:layout_above="@+id/restart_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="1"
        android:id="@+id/capacityOfRounds_textView"
        android:layout_marginLeft="5dp"
        android:layout_above="@+id/restart_button"
        android:layout_toEndOf="@+id/round_textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/end_button"
        android:id="@+id/end_button"
        android:layout_below="@+id/capacityOfRounds_textView"
        android:layout_alignStart="@+id/whoseTurn_imageView" />

</RelativeLayout>
